Name: arsenic
Version: 0.2.2
Author: Joshua Blume
Maintainer: JoshuaBlume
Homepage: http://www.botdom.com/wiki/Arsenic
Category: Testing
Stability: beta
Build-Type: Simple
Synopsis: A bot for dAmn (deviantArt Messaging Network) chatrooms.
Description: A bot for dAmn (deviantART Messaging Network) chatrooms.
Cabal-Version: >= 1.6

Executable arsenic
    Build-Depends: HTTP, array, asn1-data, attoparsec, attoparsec-enumerator, base, base-unicode-symbols, base64-bytestring, binary, blaze-builder, blaze-builder-enumerator, bytestring, case-insensitive, cereal, certificate, ConfigFile, containers, crypto-api, cryptocipher, cryptohash, data-default, deepseq, directory, enumerator, failure, filepath, ghc-prim, http-enumerator==0.6.*, http-types>=0.6.2, integer-gmp, monad-control>=0.2.0.1, mtl, network>=2.3, old-locale, old-time, parsec, primitive, random, regex-base, tagged, text, time, tls, tls-extra, transformers==0.2.*, unix, utf8-string, vector, zlib, zlib-bindings, zlib-enum
    if !os(windows)
        Build-Depends: regex-pcre
    else
        regex-pcre-builtin
    Main-Is: Main.hs
    Hs-Source-Dirs: src
